feat: 뒤로가기 클릭 시 팝업 표시

--- a/app/src/main/res/layout/activity_basic_information.xml
+++ b/app/src/main/res/layout/activity_basic_information.xml
@@ -118,7 +118,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:textColorHint="@color/gray_500"
-                        app:endIconContentDescription="취소"
+                        app:endIconContentDescription="@string/cancel"
                         app:endIconDrawable="@drawable/ic_cancel"
                         app:endIconMode="clear_text"
                         app:endIconTint="@null"
@@ -187,7 +187,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:textColorHint="@color/gray_500"
-                        app:endIconContentDescription="취소"
+                        app:endIconContentDescription="@string/cancel"
                         app:endIconDrawable="@drawable/ic_cancel"
                         app:endIconMode="clear_text"
                         app:endIconTint="@null"
