--- a/app/src/main/res/layout/dialog_common.xml
+++ b/app/src/main/res/layout/dialog_common.xml
@@ -69,7 +69,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_positive_button"
                 app:layout_constraintTop_toBottomOf="@id/tv_sub_button"
-                tools:text="취소" />
+                tools:text="@string/cancel" />
 
             <TextView
                 android:id="@+id/tv_positive_button"
