--- a/app/src/main/res/layout/fragment_write_insight_basic_info.xml
+++ b/app/src/main/res/layout/fragment_write_insight_basic_info.xml
@@ -312,7 +312,8 @@
                     android:maxLength="10"
                     android:padding="16dp"
                     android:singleLine="true"
-                    android:textColor="@color/gray_900" />
+                    android:textColor="@color/gray_900"
+                    android:inputType="number" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
