--- a/app/src/main/res/layout/fragment_write_insight_basic_info.xml
+++ b/app/src/main/res/layout/fragment_write_insight_basic_info.xml
@@ -45,8 +45,20 @@
                 app:layout_constraintStart_toEndOf="@id/tv_cover_image_subject"
                 app:layout_constraintTop_toTopOf="@id/tv_cover_image_subject" />
 
+            <ImageView
+                android:id="@+id/iv_cover_image"
+                bindCornerRadius="@{4}"
+                bindImageUri="@{viewModel.coverImageUri}"
+                android:layout_width="140dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="8dp"
+                android:importantForAccessibility="no"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_cover_image_subject" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_image_container"
+                bindVisible="@{viewModel.coverImageUri == null}"
                 android:layout_width="140dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="8dp"
@@ -67,36 +79,56 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_image_add"
+                bindVisible="@{viewModel.coverImageUri == null}"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/sr_white_gray100_all6"
                 android:paddingHorizontal="12dp"
-                app:layout_constraintBottom_toBottomOf="@id/cl_image_container"
-                app:layout_constraintStart_toEndOf="@id/cl_image_container"
-                app:layout_constraintTop_toTopOf="@id/cl_image_container">
+                app:layout_constraintBottom_toBottomOf="@id/iv_cover_image"
+                app:layout_constraintStart_toEndOf="@id/iv_cover_image"
+                app:layout_constraintTop_toTopOf="@id/iv_cover_image">
 
                 <ImageView
                     android:id="@+id/iv_image_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
                     android:importantForAccessibility="no"
                     android:src="@drawable/ic_plus"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/tv_image_add"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/tv_image_add"
                     style="@style/T_600_12_16_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
                     android:text="@string/image_add"
                     android:textColor="@color/gray_700"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/iv_image_add"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_image_edit"
+                style="@style/T_600_12_16_8"
+                bindVisible="@{viewModel.coverImageUri != null}"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/sr_white_gray100_all6"
+                android:gravity="center"
+                android:paddingHorizontal="12dp"
+                android:text="@string/image_edit"
+                android:textColor="@color/gray_700"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/iv_cover_image"
+                app:layout_constraintStart_toEndOf="@id/iv_cover_image"
+                app:layout_constraintTop_toTopOf="@id/iv_cover_image" />
 
             <TextView
                 android:id="@+id/tv_title_subject"
@@ -107,7 +139,7 @@
                 android:text="@string/title"
                 android:textColor="@color/gray_700"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cl_image_container" />
+                app:layout_constraintTop_toBottomOf="@id/iv_cover_image" />
 
             <TextView
                 android:id="@+id/tv_title_asterisk"
@@ -309,11 +341,11 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_basic_information_edittext"
                     android:hint="@string/hint_date_of_visit"
+                    android:inputType="number"
                     android:maxLength="10"
                     android:padding="16dp"
                     android:singleLine="true"
-                    android:textColor="@color/gray_900"
-                    android:inputType="number" />
+                    android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
