--- a/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
+++ b/app/src/main/res/layout/fragment_write_insight_complex_facility.xml
@@ -710,6 +710,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_apt_facility_review_subject">
 
                 <TextView
+                    android:id="@+id/tv_apt_facility_review"
                     style="@style/T_500_16_22_4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -722,6 +723,7 @@
 
             <View
                 android:id="@+id/view_apt_facility_overall_review"
+                bindVisible="@{!viewModel.complexFacilityReviewValid}"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 app:layout_constraintBottom_toBottomOf="@id/nsv_apt_facility_overall_review"
