--- a/app/src/main/res/layout/fragment_write_insight_good_news.xml
+++ b/app/src/main/res/layout/fragment_write_insight_good_news.xml
@@ -1028,6 +1028,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_good_news_review_subject">
 
                 <TextView
+                    android:id="@+id/tv_good_news_review"
                     style="@style/T_500_16_22_4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -1040,6 +1041,7 @@
 
             <View
                 android:id="@+id/view_good_news_overall_review"
+                bindVisible="@{!viewModel.goodNewsReviewValid}"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 app:layout_constraintBottom_toBottomOf="@id/nsv_good_news_overall_review"
