--- a/app/src/main/res/layout/fragment_write_insight_infra.xml
+++ b/app/src/main/res/layout/fragment_write_insight_infra.xml
@@ -1299,6 +1299,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_infra_overall_review_subject">
 
                 <TextView
+                    android:id="@+id/tv_infra_overall_review"
                     style="@style/T_500_16_22_4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -1311,6 +1312,7 @@
 
             <View
                 android:id="@+id/view_infra_overall_review"
+                bindVisible="@{!viewModel.infraReviewValid}"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 app:layout_constraintBottom_toBottomOf="@id/nsv_infra_overall_review"
