--- a/app/src/main/res/layout/item_visit_complex_insight_apt.xml
+++ b/app/src/main/res/layout/item_visit_complex_insight_apt.xml
@@ -17,8 +17,10 @@
         android:textAppearance="@style/T_500_14_19_6"
         android:textColor="@{item.isSelected ? @color/white : @color/gray_500}"
         app:chipBackgroundColor="@{item.isSelected ? @color/orange_500 : @color/white}"
-        app:chipCornerRadius="33dp"
-        app:chipMinTouchTargetSize="33dp"
+        app:chipCornerRadius="36dp"
+        app:chipEndPadding="8dp"
+        app:chipMinTouchTargetSize="36dp"
+        app:chipStartPadding="8dp"
         app:chipStrokeColor="@{item.isSelected ? @color/orange_500 : @color/gray_100}"
         tools:text="신논현 더 센트럴 푸르지오" />
 </layout>
