--- a/app/src/main/res/layout/fragment_write_insight_basic_info.xml
+++ b/app/src/main/res/layout/fragment_write_insight_basic_info.xml
@@ -262,6 +262,7 @@
                     android:hint="@string/hint_apt_address"
                     android:padding="16dp"
                     android:singleLine="true"
+                    android:text="@{viewModel.insightAptAddress}"
                     android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -284,6 +285,7 @@
                     android:enabled="false"
                     android:hint="@string/hint_apt_name"
                     android:padding="16dp"
+                    android:text="@{viewModel.insightAptName}"
                     android:textColor="@color/gray_900" />
             </com.google.android.material.textfield.TextInputLayout>
 
