feat: 알림 화면 UI 구현

--- a/component/src/main/res/values/colors.xml
+++ b/component/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="gray_900">#1E1E1E</color>
 
     <color name="red">#E93528</color>
+    <color name="blue_11388b">#11388b</color>
 </resources>
